[package]
name = "atcoder-202004-lock"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
description = "A workspace-hack package for AtCoder."
repository = "https://github.com/qryxip/atcoder-202004-lock"
keywords = ["atcoder", "competitive", "workspace-hack"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
aho-corasick-0-7-10 = { package = "aho-corasick", version = "=0.7.10", default-features = false }
alga-0-9-3 = { package = "alga", version = "=0.9.3", default-features = false }
approx-0-3-2 = { package = "approx", version = "=0.3.2", default-features = false }
ascii-1-0-0 = { package = "ascii", version = "=1.0.0", default-features = false }
autocfg-1-0-0 = { package = "autocfg", version = "=1.0.0", default-features = false }
bitmaps-2-1-0 = { package = "bitmaps", version = "=2.1.0", default-features = false }
bitset-fixed-0-1-0 = { package = "bitset-fixed", version = "=0.1.0", default-features = false }
cfg-if-0-1-10 = { package = "cfg-if", version = "=0.1.10", default-features = false }
either-1-5-3 = { package = "either", version = "=1.5.3", default-features = false }
fixedbitset-0-2-0 = { package = "fixedbitset", version = "=0.2.0", default-features = false }
generic-array-0-13-2 = { package = "generic-array", version = "=0.13.2", default-features = false }
getrandom-0-1-14 = { package = "getrandom", version = "=0.1.14", default-features = false }
im-rc-14-3-0 = { package = "im-rc", version = "=14.3.0", default-features = false }
indexmap-1-3-2 = { package = "indexmap", version = "=1.3.2", default-features = false }
itertools-0-8-2 = { package = "itertools", version = "=0.8.2", default-features = false }
itertools-0-9-0 = { package = "itertools", version = "=0.9.0", default-features = false }
itertools-num-0-1-3 = { package = "itertools-num", version = "=0.1.3", default-features = false }
lazy_static-1-4-0 = { package = "lazy_static", version = "=1.4.0", default-features = false }
libc-0-2-68 = { package = "libc", version = "=0.2.68", default-features = false }
libm-0-2-1 = { package = "libm", version = "=0.2.1", default-features = false }
maplit-1-0-2 = { package = "maplit", version = "=1.0.2", default-features = false }
matrixmultiply-0-2-3 = { package = "matrixmultiply", version = "=0.2.3", default-features = false }
memchr-2-3-3 = { package = "memchr", version = "=2.3.3", default-features = false }
nalgebra-0-20-0 = { package = "nalgebra", version = "=0.20.0", default-features = false }
ndarray-0-13-0 = { package = "ndarray", version = "=0.13.0", default-features = false }
num-0-2-1 = { package = "num", version = "=0.2.1", default-features = false }
num-bigint-0-2-6 = { package = "num-bigint", version = "=0.2.6", default-features = false }
num-complex-0-2-4 = { package = "num-complex", version = "=0.2.4", default-features = false }
num-derive-0-3-0 = { package = "num-derive", version = "=0.3.0", default-features = false }
num-integer-0-1-42 = { package = "num-integer", version = "=0.1.42", default-features = false }
num-iter-0-1-40 = { package = "num-iter", version = "=0.1.40", default-features = false }
num-rational-0-2-4 = { package = "num-rational", version = "=0.2.4", default-features = false }
num-traits-0-2-11 = { package = "num-traits", version = "=0.2.11", default-features = false }
ordered-float-1-0-2 = { package = "ordered-float", version = "=1.0.2", default-features = false }
permutohedron-0-2-4 = { package = "permutohedron", version = "=0.2.4", default-features = false }
petgraph-0-5-0 = { package = "petgraph", version = "=0.5.0", default-features = false }
ppv-lite86-0-2-6 = { package = "ppv-lite86", version = "=0.2.6", default-features = false }
proc-macro2-0-4-30 = { package = "proc-macro2", version = "=0.4.30", default-features = false }
proc-macro2-1-0-10 = { package = "proc-macro2", version = "=1.0.10", default-features = false }
proconio-0-3-6 = { package = "proconio", version = "=0.3.6", default-features = false }
proconio-derive-0-1-6 = { package = "proconio-derive", version = "=0.1.6", default-features = false }
quote-0-6-13 = { package = "quote", version = "=0.6.13", default-features = false }
quote-1-0-3 = { package = "quote", version = "=1.0.3", default-features = false }
rand-0-7-3 = { package = "rand", version = "=0.7.3", default-features = false }
rand_chacha-0-2-2 = { package = "rand_chacha", version = "=0.2.2", default-features = false }
rand_core-0-5-1 = { package = "rand_core", version = "=0.5.1", default-features = false }
rand_distr-0-2-2 = { package = "rand_distr", version = "=0.2.2", default-features = false }
rand_hc-0-2-0 = { package = "rand_hc", version = "=0.2.0", default-features = false }
rand_pcg-0-2-1 = { package = "rand_pcg", version = "=0.2.1", default-features = false }
rand_xoshiro-0-4-0 = { package = "rand_xoshiro", version = "=0.4.0", default-features = false }
rawpointer-0-2-1 = { package = "rawpointer", version = "=0.2.1", default-features = false }
regex-1-3-6 = { package = "regex", version = "=1.3.6", default-features = false }
regex-syntax-0-6-17 = { package = "regex-syntax", version = "=0.6.17", default-features = false }
rustc-hash-1-1-0 = { package = "rustc-hash", version = "=1.1.0", default-features = false }
sized-chunks-0-5-3 = { package = "sized-chunks", version = "=0.5.3", default-features = false }
smallvec-1-2-0 = { package = "smallvec", version = "=1.2.0", default-features = false }
superslice-1-0-0 = { package = "superslice", version = "=1.0.0", default-features = false }
syn-0-15-44 = { package = "syn", version = "=0.15.44", default-features = false }
syn-1-0-17 = { package = "syn", version = "=1.0.17", default-features = false }
text_io-0-1-8 = { package = "text_io", version = "=0.1.8", default-features = false }
thread_local-1-0-1 = { package = "thread_local", version = "=1.0.1", default-features = false }
typenum-1-11-2 = { package = "typenum", version = "=1.11.2", default-features = false }
unicode-xid-0-1-0 = { package = "unicode-xid", version = "=0.1.0", default-features = false }
unicode-xid-0-2-0 = { package = "unicode-xid", version = "=0.2.0", default-features = false }
version_check-0-9-1 = { package = "version_check", version = "=0.9.1", default-features = false }
wasi-0-9-0-wasi-snapshot-preview1 = { package = "wasi", version = "=0.9.0", default-features = false }
whiteread-0-5-0 = { package = "whiteread", version = "=0.5.0", default-features = false }
