[package]
name = "atcoder-202004-lock"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "CC0-1.0"
description = "A workspace-hack package for AtCoder."
repository = "https://github.com/qryxip/atcoder-202004-lock"
keywords = ["atcoder", "competitive", "workspace-hack"]
categories = ["development-tools::build-utils"]
publish = false

[dependencies]
package00 = { package = "aho-corasick", version = "=0.7.10", default-features = false }
package01 = { package = "alga", version = "=0.9.3", default-features = false }
package02 = { package = "approx", version = "=0.3.2", default-features = false }
package03 = { package = "ascii", version = "=1.0.0", default-features = false }
package04 = { package = "autocfg", version = "=1.0.0", default-features = false }
package05 = { package = "bitmaps", version = "=2.1.0", default-features = false }
package06 = { package = "bitset-fixed", version = "=0.1.0", default-features = false }
package07 = { package = "cfg-if", version = "=0.1.10", default-features = false }
package08 = { package = "either", version = "=1.5.3", default-features = false }
package09 = { package = "fixedbitset", version = "=0.2.0", default-features = false }
package10 = { package = "generic-array", version = "=0.13.2", default-features = false }
package11 = { package = "getrandom", version = "=0.1.14", default-features = false }
package12 = { package = "im-rc", version = "=14.3.0", default-features = false }
package13 = { package = "indexmap", version = "=1.3.2", default-features = false }
package14 = { package = "itertools", version = "=0.8.2", default-features = false }
package15 = { package = "itertools", version = "=0.9.0", default-features = false }
package16 = { package = "itertools-num", version = "=0.1.3", default-features = false }
package17 = { package = "lazy_static", version = "=1.4.0", default-features = false }
package18 = { package = "libc", version = "=0.2.68", default-features = false }
package19 = { package = "libm", version = "=0.2.1", default-features = false }
package20 = { package = "maplit", version = "=1.0.2", default-features = false }
package21 = { package = "matrixmultiply", version = "=0.2.3", default-features = false }
package22 = { package = "memchr", version = "=2.3.3", default-features = false }
package23 = { package = "nalgebra", version = "=0.20.0", default-features = false }
package24 = { package = "ndarray", version = "=0.13.0", default-features = false }
package25 = { package = "num", version = "=0.2.1", default-features = false }
package26 = { package = "num-bigint", version = "=0.2.6", default-features = false }
package27 = { package = "num-complex", version = "=0.2.4", default-features = false }
package28 = { package = "num-derive", version = "=0.3.0", default-features = false }
package29 = { package = "num-integer", version = "=0.1.42", default-features = false }
package30 = { package = "num-iter", version = "=0.1.40", default-features = false }
package31 = { package = "num-rational", version = "=0.2.4", default-features = false }
package32 = { package = "num-traits", version = "=0.2.11", default-features = false }
package33 = { package = "ordered-float", version = "=1.0.2", default-features = false }
package34 = { package = "permutohedron", version = "=0.2.4", default-features = false }
package35 = { package = "petgraph", version = "=0.5.0", default-features = false }
package36 = { package = "ppv-lite86", version = "=0.2.6", default-features = false }
package37 = { package = "proc-macro2", version = "=0.4.30", default-features = false }
package38 = { package = "proc-macro2", version = "=1.0.10", default-features = false }
package39 = { package = "proconio", version = "^0.3.6", default-features = false }
package40 = { package = "proconio-derive", version = "^0.1.6", default-features = false }
package41 = { package = "quote", version = "=0.6.13", default-features = false }
package42 = { package = "quote", version = "=1.0.3", default-features = false }
package43 = { package = "rand", version = "=0.7.3", default-features = false }
package44 = { package = "rand_chacha", version = "=0.2.2", default-features = false }
package45 = { package = "rand_core", version = "=0.5.1", default-features = false }
package46 = { package = "rand_distr", version = "=0.2.2", default-features = false }
package47 = { package = "rand_hc", version = "=0.2.0", default-features = false }
package48 = { package = "rand_pcg", version = "=0.2.1", default-features = false }
package49 = { package = "rand_xoshiro", version = "=0.4.0", default-features = false }
package50 = { package = "rawpointer", version = "=0.2.1", default-features = false }
package51 = { package = "regex", version = "=1.3.6", default-features = false }
package52 = { package = "regex-syntax", version = "=0.6.17", default-features = false }
package53 = { package = "rustc-hash", version = "=1.1.0", default-features = false }
package54 = { package = "sized-chunks", version = "=0.5.3", default-features = false }
package55 = { package = "smallvec", version = "=1.2.0", default-features = false }
package56 = { package = "superslice", version = "=1.0.0", default-features = false }
package57 = { package = "syn", version = "=0.15.44", default-features = false }
package58 = { package = "syn", version = "=1.0.17", default-features = false }
package59 = { package = "text_io", version = "=0.1.8", default-features = false }
package60 = { package = "thread_local", version = "=1.0.1", default-features = false }
package61 = { package = "typenum", version = "=1.11.2", default-features = false }
package62 = { package = "unicode-xid", version = "=0.1.0", default-features = false }
package63 = { package = "unicode-xid", version = "=0.2.0", default-features = false }
package64 = { package = "version_check", version = "=0.9.1", default-features = false }
package65 = { package = "wasi", version = "=0.9.0", default-features = false }
package66 = { package = "whiteread", version = "=0.5.0", default-features = false }
